Changed title appearance of quizzes, fixed margin spacing of list of quizzes on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,10 +2,17 @@
   font-family: 'Josefin Sans', sans-serif;
 }
 
-header,
-.project:not(:last-child) {
+header {
   border-bottom: 1px solid #ccc;
 }
+
+.project:not(:last-child) {
+  border-bottom: 1px solid #1b89bc;
+}
+
+/* .project p :not(:last-child) {
+  border-bottom: 1px solid #1b89bc;
+} */
 
 .no-button {
   background: none;
@@ -82,9 +89,19 @@ h3 {
   color: #1b89bc;
   font-style: italic;
   text-align: center;
+  margin-bottom: 0;
 }
 
-h1,
+h1 {
+  margin: 5px auto;
+}
+
+@media screen and (min-width: 768px) {
+  h1 {
+    margin: 40px auto;
+  }
+}
+
 h2,
 .question,
 ol,
@@ -192,6 +209,21 @@ input {
   color: white;
   background-color: #1b89bc;
   border-radius: 15px;
+}
+
+.quizBtns {
+  /* display: flex; */
+  transition: 0.3s;
+  color: white;
+  background-color: #1b89bc;
+  border-radius: 15px;
+  padding: 6px 8px 1px 6px;
+}
+
+.quizBtns h3 a{
+  color: white;
+  text-decoration: none;
+  padding: 6px 8px 1px 6px;
 }
 
 .startBtn p {
